# backgammon-rl

./: .gitignore  CLAUDE.md  DECISIONS.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-env-read.sh
bgrl/: __init__.py  game.py  money.py
bgrl/_vendor/: __init__.py  gym_backgammon_ref.py
bgrl/agents/: __init__.py  base.py  cube_policy.py  expectimax_agent.py  llm_agent.py  pubeval_agent.py  random_agent.py  td_agent.py  value_agent.py
bgrl/bench/: __init__.py  aggregate.py  fingerprint.py  runner.py  schema.py  selfplay.py
bgrl/env/: __init__.py  apply.py  board.py  dice.py  encoding.py  env.py  movegen.py  outcome.py  types.py
bgrl/llm/: __init__.py  build.py  client.py  parse.py  prompt.py  refine.py  render.py  scorer.py
bgrl/nets/: __init__.py  base.py  cube.py  equity.py  value_net.py
bgrl/serialization/: __init__.py  checkpoint.py  gnubg.py  mat.py
bgrl/web/: agents.py  (+5 more)
docs/: web-dev.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plans/: wp0-foundation.md  wp1-td-cleanup-handoff.md  wp1-td-lambda.md  wp2-expectimax.md  wp3-web-gnubg.md  wp4-llm-agent.md  wp5-alphazero.md  wp6-multihead-cube.md  wp6-training-runbook.md  wp7-match-play.md
scripts/: aggregate_bench.py  aggregate_runs.py  bench_expectimax.py  benchmark_env.py  calibrate.py  curate_web_opponents.py  eval_agent.py  eval_llm.py  eval_vs_gnubg.py  play_web.py  plot_heatmap.py  plot_marginals.py  refine_llm.py  tournament.py  train.py
slurm/: README.md  train_sweep.sbatch
tests/: test_agents_nets.py  test_game.py  test_money.py  test_scaffold.py
(+70 files in other folders)
